--- a/assets/main.scss
+++ b/assets/main.scss
@@ -188,3 +188,45 @@ footer .quote {
       }
     }
   }
+
+.blog-intro {
+    margin-bottom: 2rem;
+    font-size: 1.1em;
+    color: var(--text-color);
+  }
+  
+  .featured-post {
+    background-color: rgba(23, 162, 184, 0.1);
+    border-left: 4px solid var(--accent-color);
+    padding: 1rem;
+    margin-bottom: 2rem;
+  
+    h3 {
+      margin-top: 0;
+    }
+  }
+  
+  .post-list {
+    list-style-type: none;
+    padding: 0;
+  
+    li {
+      margin-bottom: 2rem;
+      border-bottom: 1px solid #e0e0e0;
+      padding-bottom: 1rem;
+  
+      &:last-child {
+        border-bottom: none;
+      }
+    }
+  
+    h3 {
+      margin-bottom: 0.5rem;
+    }
+  }
+  
+  .post-meta {
+    font-style: italic;
+    color: var(--accent-color);
+    margin-bottom: 0.5rem;
+  }
