--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
                         <li><a href="{{ '/' | relative_url }}" {% if page.url == '/' %}class="active"{% endif %}>home</a></li>
                         <li><a href="{{ '/stuff-ive-worked-on' | relative_url }}" {% if page.url == '/stuff-ive-worked-on' %}class="active"{% endif %}>stuff i've worked on</a></li>
                         <li><a href="{{ '/blog' | relative_url }}" {% if page.url == '/blog' %}class="active"{% endif %}>blog</a></li>
+                        <li><a href="{{ '/hobbies' | relative_url }}" {% if page.url == '/hobbies' %}class="active"{% endif %}>hobbies</a></li>
                     </ul>
                 </nav>
             </div>
