--- a/assets/main.scss
+++ b/assets/main.scss
@@ -43,11 +43,12 @@ header {
 .title-nav {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
 }
 
-h1 {
-    color: var(--bg-color);
-    margin: 0 0 0.5rem 0;
+h1, h2 {
+    color: var(--header-color);
+    margin: 0 0 1rem 0;
 }
 
 nav ul {
@@ -79,29 +80,16 @@ nav a:hover, nav a.active {
 }
 
 main {
-    flex: 1 0 auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    padding: 2rem;
-    box-sizing: border-box;
+  flex: 1 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding: 2rem;
+  box-sizing: border-box;
+  max-width: 800px;
 }
 
-.main-container {
-    width: 100%;
-    max-width: 800px; 
-    margin: 0 auto; 
-    padding: 4rem;
-}
-
-.bio-content {
-    max-width: 800px;
-    margin: 0 auto;
-    text-align: left;
-    font-size: 1.1rem;
-}
-
-.bio-text p {
+p {
     margin-bottom: 1em;
     line-height: 1.5;   
 }
@@ -122,78 +110,11 @@ footer .quote {
     margin-top: 10px;
 }
 
-
-.post {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 2rem 0;
-  
-    h1 {
-      color: var(--header-color);
-    }
-  
-    .post-meta {
-      color: var(--accent-color);
-      font-style: italic;
-    }
-  
-    .post-content {
-      margin-top: 2rem;
-  
-      img {
-        max-width: 100%;
-        height: auto;
-        display: block;
-        margin: 2rem auto;
-        border-radius: 8px;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      }
-  
-      figure {
-        margin: 2rem 0;
-  
-        img {
-          margin-bottom: 0.5rem;
-        }
-  
-        figcaption {
-          text-align: center;
-          font-style: italic;
-          color: var(--text-color);
-          opacity: 0.8;
-        }
-      }
-    }
-  
-    .post-navigation {
-      display: flex;
-      justify-content: space-between;
-      margin-top: 2rem;
-  
-      a {
-        color: var(--accent-color);
-        text-decoration: none;
-  
-        &:hover {
-          text-decoration: underline;
-        }
-      }
-    }
-  }
-  
-  @media (min-width: 768px) {
-    .post-content {
-      img {
-        max-width: 80%;
-      }
-    }
-  }
-
-.blog-intro {
+.page-intro {
     margin-bottom: 2rem;
     font-size: 1.1em;
     color: var(--text-color);
-  }
+}
   
   .featured-post {
     background-color: rgba(23, 162, 184, 0.1);
