--- a/assets/main.scss
+++ b/assets/main.scss
@@ -134,28 +134,81 @@ footer .quote {
       margin-top: 0;
     }
   }
-  
-  .post-list {
-    list-style-type: none;
-    padding: 0;
-  
-    li {
-      margin-bottom: 2rem;
-      border-bottom: 1px solid #e0e0e0;
-      padding-bottom: 1rem;
-  
-      &:last-child {
-        border-bottom: none;
-      }
-    }
-  
-    h3 {
-      margin-bottom: 0.5rem;
+
+.post-list {
+  list-style-type: none;
+  padding: 0;
+
+  li {
+    margin-bottom: 2rem;
+    border-bottom: 1px solid #e0e0e0;
+    padding-bottom: 1rem;
+
+    &:last-child {
+      border-bottom: none;
     }
   }
-  
-  .post-meta {
-    font-style: italic;
-    color: var(--accent-color);
+
+  h3 {
     margin-bottom: 0.5rem;
   }
+}
+
+.post-meta {
+  font-style: italic;
+  color: var(--accent-color);
+  margin-bottom: 0.5rem;
+}
+
+
+.featured-hobby {
+  background-color: rgba(23, 162, 184, 0.1);
+  border-left: 4px solid var(--accent-color);
+  padding: 1rem;
+  margin-bottom: 2rem;
+}
+
+.book-recommendation {
+  display: flex;
+  align-items: start;
+}
+
+.book-recommendation img {
+  width: 100px;
+  margin-right: 1rem;
+}
+
+.book-details h4 {
+  margin: 0;
+}
+
+.book-details .author {
+  font-style: italic;
+  color: var(--accent-color);
+}
+
+.hobby-list {
+  list-style-type: none;
+  padding: 0;
+}
+
+.hobby-item {
+  margin-bottom: 2rem;
+  border-bottom: 1px solid #e0e0e0;
+  padding-bottom: 1rem;
+}
+
+.hobby-item:last-child {
+  border-bottom: none;
+}
+
+.book-list {
+  padding-left: 1rem;
+}
+
+.divider {
+  border: 0;
+  height: 1px;
+  background-color: #e0e0e0;
+  margin: 2rem 0;
+}
