--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,4 +1,4 @@
---- 
+---
 ---
 
 :root {
@@ -6,6 +6,7 @@
     --text-color: #495057;
     --accent-color: #17A2B8;
     --header-color: #343A40;
+    --overrated-color: #FF6B6B; 
 }
 
 html, body {
@@ -33,19 +34,19 @@ header {
 }
 
 .header-content {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 2rem;
 }
 
 .title-nav {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    flex-grow: 1;
 }
 
 h1, h2 {
@@ -55,46 +56,36 @@ h1, h2 {
 }
 
 nav {
-  width: 100%;
-}
-
-nav ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  justify-content: flex-start;
-}
-
-nav ul li {
-  margin-right: 1rem;
-}
-
-nav a {
-    color: var(--bg-color);
-    text-decoration: none;
-    font-weight: 600;
-    text-transform: lowercase;
-}
-
-nav a:hover, nav a.active {
-    color: var(--accent-color);
-    text-decoration: underline;
+    width: 100;
+    
+    ul {
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+        display: flex;
+        justify-content: flex-start;
+        
+        li {
+            margin-right: 1rem;
+        }
+    }
+    
+    a {
+        color: var(--bg-color);
+        text-decoration: none;
+        font-weight: 600;
+        text-transform: lowercase;
+        
+        &:hover, &.active {
+            color: var(--accent-color);
+            text-decoration: underline;
+        }
+    }
 }
 
 #brunny-eth-image {
     width: 60px;  
     height: auto;
-}
-
-main {
-  flex: 1 0 auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  padding: 2rem;
-  box-sizing: border-box;
-  max-width: 800px;
 }
 
 p {
@@ -109,13 +100,13 @@ footer {
     background-color: var(--header-color);
     color: var(--bg-color);
     font-size: 1.05rem;
-}
-
-footer .quote {
-    font-style: italic;
-    font-size: 0.9em;
-    color: var(--accent-color);
-    margin-top: 10px;
+    
+    .quote {
+        font-style: italic;
+        font-size: 0.9em;
+        color: var(--accent-color);
+        margin-top: 10px;
+    }
 }
 
 .page-intro {
@@ -123,92 +114,84 @@ footer .quote {
     font-size: 1.1em;
     color: var(--text-color);
 }
-  
-  .featured-post {
+
+.featured-post {
     background-color: rgba(23, 162, 184, 0.1);
     border-left: 4px solid var(--accent-color);
     padding: 1rem;
     margin-bottom: 2rem;
-  
+    
     h3 {
-      margin-top: 0;
+        margin-top: 0;
     }
-  }
+}
 
 .post-list {
-  list-style-type: none;
-  padding: 0;
-
-  li {
-    margin-bottom: 2rem;
-    border-bottom: 1px solid #e0e0e0;
-    padding-bottom: 1rem;
-
-    &:last-child {
-      border-bottom: none;
+    list-style-type: none;
+    padding: 0;
+    
+    li {
+        margin-bottom: 2rem;
+        border-bottom: 1px solid #e0e0e0;
+        padding-bottom: 1rem;
+        
+        &:last-child {
+            border-bottom: none;
+        }
     }
-  }
-
-  h3 {
-    margin-bottom: 0.5rem;
-  }
+    
+    h3 {
+        margin-bottom: 0.5rem;
+    }
 }
 
 .post-meta {
-  font-style: italic;
-  color: var(--accent-color);
-  margin-bottom: 0.5rem;
-}
-
-
-.featured-hobby {
-  background-color: rgba(23, 162, 184, 0.1);
-  border-left: 4px solid var(--accent-color);
-  padding: 1rem;
-  margin-bottom: 2rem;
-}
-
-.book-recommendation {
-  display: flex;
-  align-items: start;
-}
-
-.book-recommendation img {
-  width: 100px;
-  margin-right: 1rem;
-}
-
-.book-details h4 {
-  margin: 0;
-}
-
-.book-details .author {
-  font-style: italic;
-  color: var(--accent-color);
-}
-
-.hobby-list {
-  list-style-type: none;
-  padding: 0;
-}
-
-.hobby-item {
-  margin-bottom: 2rem;
-  border-bottom: 1px solid #e0e0e0;
-  padding-bottom: 1rem;
-}
-
-.hobby-item:last-child {
-  border-bottom: none;
+    font-style: italic;
+    color: var(--accent-color);
+    margin-bottom: 0.5rem;
 }
 
 .book-list {
-  padding-left: 1rem;
+    margin-top: 1rem;
 }
 
-.divider {
-  border: 0;
-  height: 1px;
-  background-color: #e0e0e0;
-  margin: 2rem 0;
+.book-item {
+    margin-bottom: 1.5rem;
+    border-left: 3px solid var(--accent-color);
+    padding-left: 1rem;
+    
+    h4 {
+        margin-bottom: 0.5rem;
+        color: var(--accent-color);
+    }
+    
+    p {
+        margin-bottom: 0.5rem;
+    }
+}
+
+.book-list.overrated {
+  .book-item {
+      border-left-color: var(--overrated-color);
+  }
+  
+  h4 {
+      color: var(--overrated-color);
+  }
+}
+
+
+main {
+  flex: 1 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding: 2rem;
+  box-sizing: border-box;
+  max-width: 800px;
+}
+
+h2 + p, h2 + ul, h2 + ol, h2 + div {
+  font-size: 1em;
+  line-height: 1.6;
 }
