spent a few days working on getting this website hosted; had to make some stylistic changes / build settings changes to get this to work

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,10 +14,10 @@
                 <h1>brunny.eth</h1>
                 <nav>
                     <ul>
-                        <li><a href="{{ '/' | relative_url }}" {% if page.url == '/' %}class="active"{% endif %}>home</a></li>
-                        <li><a href="{{ '/stuff-ive-worked-on' | relative_url }}" {% if page.url == '/stuff-ive-worked-on' %}class="active"{% endif %}>stuff i've worked on</a></li>
-                        <li><a href="{{ '/blog' | relative_url }}" {% if page.url == '/blog' %}class="active"{% endif %}>blog</a></li>
-                        <li><a href="{{ '/hobbies' | relative_url }}" {% if page.url == '/hobbies' %}class="active"{% endif %}>hobbies</a></li>
+                        <li><a href="{{ '/' | relative_url }}" {% if page.url == '/' %}class="active"{% endif %}>About me</a></li>
+                        <li><a href="{{ '/projects-ive-worked-on' | relative_url }}" {% if page.url == '/projects-ive-worked-on' %}class="active"{% endif %}>Projects I've worked on</a></li>
+                        <li><a href="{{ '/blog' | relative_url }}" {% if page.url == '/blog' %}class="active"{% endif %}>Blog</a></li>
+                        <li><a href="{{ '/hobbies' | relative_url }}" {% if page.url == '/hobbies' %}class="active"{% endif %}>Hobbies</a></li>
                     </ul>
                 </nav>
             </div>
@@ -34,4 +34,4 @@
         <p class="quote">The ultimate fate of all intelligent beings has always been to become as grand as their thoughts. - Cixin Liu</p>
     </footer>
 </body>
-</html> 
+</html>
