--- a/assets/main.scss
+++ b/assets/main.scss
@@ -9,6 +9,7 @@
     --overrated-color: #FF6B6B; 
 }
 
+// Reset and base styles
 html, body {
     height: 100%;
     margin: 0;
@@ -22,9 +23,23 @@ body {
     color: var(--text-color);
     line-height: 1.6;
     display: flex;
+    overflow-y: scroll; 
     flex-direction: column;
 }
 
+// Typography
+h1, h2 {
+    color: var(--header-color);
+    margin: 0 0 0.5rem 0;
+    font-size: 1.5rem;
+}
+
+p {
+    margin-bottom: 1em;
+    line-height: 1.5;   
+}
+
+// Layout
 header {
     background-color: var(--header-color);
     color: var(--bg-color);
@@ -49,12 +64,33 @@ header {
     flex-grow: 1;
 }
 
-h1, h2 {
-    color: var(--header-color);
-    margin: 0 0 0.5rem 0;
-    font-size: 1.5rem;
+main {
+  flex: 1 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding: 2rem;
+  box-sizing: border-box;
+  max-width: 800px;
 }
 
+footer {
+    flex-shrink: 0;
+    text-align: center;
+    padding: 1rem;
+    background-color: var(--header-color);
+    color: var(--bg-color);
+    font-size: 1.05rem;
+    
+    .quote {
+        font-style: italic;
+        font-size: 0.9em;
+        color: var(--accent-color);
+        margin-top: 10px;
+    }
+}
+
+// Navigation
 nav {
     width: 100;
     
@@ -74,7 +110,7 @@ nav {
         color: var(--bg-color);
         text-decoration: none;
         font-weight: 600;
-        text-transform: lowercase;
+        text-transform: none;
         
         &:hover, &.active {
             color: var(--accent-color);
@@ -83,30 +119,10 @@ nav {
     }
 }
 
+// Components
 #brunny-eth-image {
     width: 60px;  
     height: auto;
-}
-
-p {
-    margin-bottom: 1em;
-    line-height: 1.5;   
-}
-
-footer {
-    flex-shrink: 0;
-    text-align: center;
-    padding: 1rem;
-    background-color: var(--header-color);
-    color: var(--bg-color);
-    font-size: 1.05rem;
-    
-    .quote {
-        font-style: italic;
-        font-size: 0.9em;
-        color: var(--accent-color);
-        margin-top: 10px;
-    }
 }
 
 .page-intro {
@@ -153,6 +169,16 @@ footer {
 
 .book-list {
     margin-top: 1rem;
+    
+    &.overrated {
+        .book-item {
+            border-left-color: var(--overrated-color);
+        }
+        
+        h4 {
+            color: var(--overrated-color);
+        }
+    }
 }
 
 .book-item {
@@ -170,16 +196,6 @@ footer {
     }
 }
 
-.book-list.overrated {
-  .book-item {
-      border-left-color: var(--overrated-color);
-  }
-  
-  h4 {
-      color: var(--overrated-color);
-  }
-}
-
 .project-list {
     margin-top: 2rem;
 }
@@ -188,31 +204,45 @@ footer {
     margin-bottom: 1rem;
     padding-bottom: 1rem;
     border-bottom: 1px solid #e0e0e0;
+    
+    &:last-child {
+        border-bottom: none;
+    }
+    
+    h3 {
+        margin-bottom: 0.5rem;
+    }
+    
+    p {
+        margin-bottom: 0.5rem;
+    }
+    
+    ul {
+        margin-left: 1rem;
+        margin-bottom: 0.5rem;
+    }
 }
 
-.project-item:last-child {
-    border-bottom: none;
-}
+// 404 page styles
 
-.project-item h3 {
+.not-found-actions {
+    margin-top: 2rem;
+  }
+  
+  .not-found-actions ul {
+    list-style-type: none;
+    padding: 0;
+  }
+  
+  .not-found-actions li {
     margin-bottom: 0.5rem;
-}
-
-.project-item p {
-    margin-bottom: 0.5rem;
-}
-
-.project-item ul {
-    margin-left: 1rem;
-    margin-bottom: 0.5rem;
-}
-
-main {
-  flex: 1 0 auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  padding: 2rem;
-  box-sizing: border-box;
-  max-width: 800px;
-}
+  }
+  
+  .not-found-actions a {
+    color: #0066cc;
+    text-decoration: none;
+  }
+  
+  .not-found-actions a:hover {
+    text-decoration: underline;
+  }
