--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,14 +14,14 @@
                 <h1>brunny.eth</h1>
                 <nav>
                     <ul>
-                        <li><a href="{{ '/' | relative_url }}" {% if page.url == '/' %}class="active"{% endif %}>About me</a></li>
-                        <li><a href="{{ '/projects-ive-worked-on' | relative_url }}" {% if page.url == '/projects-ive-worked-on' %}class="active"{% endif %}>Projects I've worked on</a></li>
+                        <li><a href="{{ '/' | relative_url }}" {% if page.url == '/' %}class="active"{% endif %}>Home</a></li>
+                        <li><a href="{{ '/projects-ive-worked-on' | relative_url }}" {% if page.url == '/projects-ive-worked-on' %}class="active"{% endif %}>Projects</a></li>
                         <li><a href="{{ '/blog' | relative_url }}" {% if page.url == '/blog' %}class="active"{% endif %}>Blog</a></li>
                         <li><a href="{{ '/hobbies' | relative_url }}" {% if page.url == '/hobbies' %}class="active"{% endif %}>Hobbies</a></li>
                     </ul>
                 </nav>
             </div>
-            <img src="{{ '/images/brunnyeth.png' | relative_url }}" alt="Brunny.eth NFT" id="brunny-eth-image">
+            <img src="{{ '/images/brunnyeth.png' | relative_url }}" alt="Brunny.eth NFT" id="brunny-eth-image" style="max-width: 60px; height: auto;">
         </div>
     </header>
 
