--- a/assets/main.scss
+++ b/assets/main.scss
@@ -51,17 +51,16 @@ header {
 .header-content {
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: center;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0 2rem;
+    padding: 0 1rem;
 }
 
 .title-nav {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    flex-grow: 1;
 }
 
 main {
@@ -90,9 +89,19 @@ footer {
     }
 }
 
+@media (max-width: 480px) {
+    .header-content {
+        padding: 0.5rem;
+    }
+    
+    nav ul li {
+        margin-right: 0.75rem; 
+    }
+}
+
 // Navigation
 nav {
-    width: 100;
+    width: 100%;
     
     ul {
         list-style-type: none;
@@ -111,6 +120,7 @@ nav {
         text-decoration: none;
         font-weight: 600;
         text-transform: none;
+        font-size: 0.95rem;
         
         &:hover, &.active {
             color: var(--accent-color);
@@ -121,8 +131,10 @@ nav {
 
 // Components
 #brunny-eth-image {
-    width: 60px;  
+    width: 48px;
     height: auto;
+    margin-left: 1rem;  
+    object-fit: contain;  
 }
 
 .page-intro {
