--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
     </main>
 
     <footer>
-        <p>© 2024 brunny.eth.</p>
+        <p>© 2025 brunny.eth</p>
         <p class="quote">The ultimate fate of all intelligent beings has always been to become as grand as their thoughts. - Cixin Liu</p>
     </footer>
 </body>
