--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,12 +11,14 @@
     <header>
         <div class="header-content">
             <div class="title-nav">
-                <h1>brunny.eth</h1>
-                <button id="menu-toggle" class="menu-toggle" aria-label="Toggle navigation menu">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                </button>
+                <div class="site-title-container">
+                    <h1>brunny.eth</h1>
+                    <button id="menu-toggle" class="menu-toggle" aria-label="Toggle navigation menu">
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                    </button>
+                </div>
                 <nav>
                     <ul>
                         <li><a href="{{ '/' | relative_url }}" {% if page.url == '/' %}class="active"{% endif %}>Home</a></li>
