--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,13 +11,14 @@
     <header>
         <div class="header-content">
             <div class="title-nav">
-                <div class="site-title-container">
+                <div class="mobile-header">
                     <h1>brunny.eth</h1>
                     <button id="menu-toggle" class="menu-toggle" aria-label="Toggle navigation menu">
                         <span class="bar"></span>
                         <span class="bar"></span>
                         <span class="bar"></span>
                     </button>
+                    <img src="{{ '/images/brunnyeth.png' | relative_url }}" alt="Brunny.eth NFT" id="brunny-eth-image">
                 </div>
                 <nav>
                     <ul>
@@ -28,7 +29,6 @@
                     </ul>
                 </nav>
             </div>
-            <img src="{{ '/images/brunnyeth.png' | relative_url }}" alt="Brunny.eth NFT" id="brunny-eth-image" style="max-width: 60px; height: auto;">
         </div>
     </header>
 
