--- a/assets/main.scss
+++ b/assets/main.scss
@@ -131,16 +131,21 @@ header {
 
 .mobile-header {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
     width: 100%;
+    justify-content: center;
+    align-items: center;
+    position: relative;
 }
 
 #brunny-eth-image {
-    margin-left: 15px;
-    width: 60px;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 50px;
     height: auto;
 }
+
 
 // Menu toggle for mobile
 .menu-toggle {
@@ -480,7 +485,7 @@ footer {
     nav {
         ul {
             flex-wrap: wrap;
-            gap: 1rem;
+            gap: 0.5rem;
             margin-top: 0.5rem;
         }
         
