--- a/assets/main.scss
+++ b/assets/main.scss
@@ -146,9 +146,12 @@ header {
     height: auto;
 }
 
-
 // Menu toggle for mobile
 .menu-toggle {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
     display: none;
     background: transparent;
     border: none;
@@ -156,11 +159,10 @@ header {
     padding: 0;
     width: 30px;
     height: 24px;
-    position: relative;
     flex-direction: column;
     justify-content: space-between;
     z-index: 10;
-    margin-left: 15px;
+    margin: 0;
 }
 
 .menu-toggle .bar {
@@ -565,29 +567,31 @@ footer {
         align-items: flex-start;
     }
     
-    .mobile-header {
-        display: flex;
-        width: 100%;
-        justify-content: space-between;
-        align-items: center;
-    }
-    
     nav {
         display: none;
         width: 100%;
         
         &.show {
             display: block;
-            margin-top: 0.5rem;
+            margin-top: 0.75rem;
             padding: 0.5rem 0;
             border-top: 1px solid rgba(255,255,255,0.1);
         }
         
         ul {
             flex-direction: column;
-            gap: 1rem;
+            gap: 0.5rem;
             margin-top: 0.5rem;
             width: 100%;
+        }
+        
+        li {
+            padding: 0.25rem 0;
+            border-bottom: 1px solid rgba(255,255,255,0.05);
+        }
+        
+        li:last-child {
+            border-bottom: none;
         }
     }
     
