slight styling changes to nav

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,9 +46,10 @@
             if (menuToggle && nav) {
                 menuToggle.addEventListener('click', function() {
                     nav.classList.toggle('show');
+                    menuToggle.classList.toggle('active'); 
                 });
             }
-        });
+        }); 
     </script>
 </body>
 </html>
